--- a/scenario.toml
+++ b/scenario.toml
@@ -1,14 +1,14 @@
 [green_agent]
 name = "codewalk-eval-agent"
-#agentbeats_id = "019bc4f3-9e0f-7ba3-8fee-9291241a4d98"
+agentbeats_id = "019c1526-b309-7e81-91a4-fca26b2091aa"
 env = { GOOGLE_API_KEY = "${GOOGLE_API_KEY}", LOG_LEVEL = "INFO" }
-image = "codewalk-eval-agent:latest"
+#image = "codewalk-eval-agent:latest"
 
 [[participants]]
 name = "codewalk-qa-agent"
-#agentbeats_id = "019c025e-dd8c-7360-a0e4-3606f0571a4d"
-image = "codewalk-qa-agent:latest"
+agentbeats_id = "019c152e-544b-7013-9155-2b783a7c7c13"
 env = { QA_API_KEY = "${GOOGLE_API_KEY}", QA_DATA_DIR = "data", QA_MODEL = "gemini-2.5-flash" }
+#image = "codewalk-qa-agent:latest"
 
 [config]
 question = "How does request processing work in FastAPI?"
