--- a/scenario.toml
+++ b/scenario.toml
@@ -1,19 +1,19 @@
 [green_agent]
 name = "codewalk-eval-agent"
 agentbeats_id = "019c1526-b309-7e81-91a4-fca26b2091aa"
-env = { GOOGLE_API_KEY = "${GOOGLE_API_KEY}", LOG_LEVEL = "INFO" }
-#env = { ANTHROPIC_API_KEY = "${ANTHROPIC_API_KEY}", LOG_LEVEL = "INFO" }
+#env = { GOOGLE_API_KEY = "${GOOGLE_API_KEY}", LOG_LEVEL = "INFO" }
+env = { ANTHROPIC_API_KEY = "${ANTHROPIC_API_KEY}", LOG_LEVEL = "INFO" }
 #image = "codewalk-eval-agent:latest"
 
 [[participants]]
 name = "codewalk-qa-agent"
 agentbeats_id = "019c152e-544b-7013-9155-2b783a7c7c13"
-env = { QA_API_KEY = "${GOOGLE_API_KEY}", QA_DATA_DIR = "data", QA_MODEL = "gemini-2.5-flash" }
-#env = { QA_API_KEY = "${ANTHROPIC_API_KEY}", QA_DATA_DIR = "data", QA_MODEL = "claude-sonnet-4-5" }
+#env = { QA_API_KEY = "${GOOGLE_API_KEY}", QA_DATA_DIR = "data", QA_MODEL = "gemini-2.5-flash" }
+env = { QA_API_KEY = "${ANTHROPIC_API_KEY}", QA_DATA_DIR = "data", QA_MODEL = "claude-sonnet-4-5" }
 #image = "codewalk-qa-agent:latest"
 
 [config]
-question = "Explain the internal mechanics of the Dependency Injection system. How does FastAPI resolve a dependency graph with sub-dependencies?"
+question = "What is the purpose and execution flow of a dependency with yield? Explain the try...finally pattern."
 repo_url = "https://github.com/tiangolo/fastapi"
-judge_model = "gemini-2.5-flash"
-#judge_model = "claude-sonnet-4-5"
+#judge_model = "gemini-2.5-flash"
+judge_model = "claude-sonnet-4-5"
