--- a/scenario.toml
+++ b/scenario.toml
@@ -1,19 +1,17 @@
 [green_agent]
-name = "codewalk-eval-agent"
-agentbeats_id = "019c1526-b309-7e81-91a4-fca26b2091aa"
-#env = { GOOGLE_API_KEY = "${GOOGLE_API_KEY}", LOG_LEVEL = "INFO" }
-env = { ANTHROPIC_API_KEY = "${ANTHROPIC_API_KEY}", LOG_LEVEL = "INFO" }
-#image = "codewalk-eval-agent:latest"
+name = "videoindex-eval-agent"
+agentbeats_id = "TODO-REGISTER-EVAL-AGENT"
+env = { GOOGLE_API_KEY = "${GOOGLE_API_KEY}", EVAL_DATA_DIR = "data", LOG_LEVEL = "INFO" }
+#env = { ANTHROPIC_API_KEY = "${ANTHROPIC_API_KEY}", EVAL_DATA_DIR = "data", LOG_LEVEL = "INFO" }
+#image = "videoindex-eval-agent:latest"
 
 [[participants]]
-name = "codewalk-qa-agent"
-agentbeats_id = "019c152e-544b-7013-9155-2b783a7c7c13"
-#env = { QA_API_KEY = "${GOOGLE_API_KEY}", QA_DATA_DIR = "data", QA_MODEL = "gemini-2.5-flash" }
-env = { QA_API_KEY = "${ANTHROPIC_API_KEY}", QA_DATA_DIR = "data", QA_MODEL = "claude-sonnet-4-5" }
-#image = "codewalk-qa-agent:latest"
+name = "videoindex-qa-agent"
+agentbeats_id = "TODO-REGISTER-QA-AGENT"
+env = { QA_DATA_DIR = "data" }
+#image = "videoindex-qa-agent:latest"
 
 [config]
-question = "What is the internal implementation of BackgroundTasks? How does it relate to Starlette?"
-repo_url = "https://github.com/tiangolo/fastapi"
-#judge_model = "gemini-2.5-flash"
-judge_model = "claude-sonnet-4-5"
+question = "Why did Raj tell himself to turn his pelvis when Penny was giving him a hug ?"
+judge_model = "gemini-2.5-flash"
+#judge_model = "claude-sonnet-4-5"
